[package]
name = "mech-mech"
version = "0.0.1"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Mech system library for the Mech language"
documentation = "http://docs.mech-lang.org"
homepage = "http://mech-lang.org"
repository = "https://github.com/mech-machines/mech"
keywords = ["mech", "language", "programming"]
license = "Apache-2.0"
readme = "README.md"

[badges]
gitlab = { repository = "mech-lang/machines/mech", branch = "main" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
mech-core = {git = "https://gitlab.com/mech-lang/core"}
mech-utilities = {git = "https://gitlab.com/mech-lang/utilities"}

crossbeam-channel = "0.4"
lazy_static = "1.4.0"